plugins/lombok/testData/inspection/superbuilder/BuilderRightType.java
<error descr="'@lombok.experimental.SuperBuilder' can be used on classes only">@lombok.experimental.SuperBuilder</error>
enum BuilderEnumError {
}

<error descr="'@lombok.experimental.SuperBuilder' can be used on classes only">@lombok.experimental.SuperBuilder</error>
interface BuilderInterfaceError {
}

<error descr="'@lombok.experimental.SuperBuilder' can be used on classes only">@lombok.experimental.SuperBuilder</error>
@interface BuilderAnnotationError {
}


